# rppd

./: .gitignore  Cargo.toml  README.md  build.rs  make.sh  pg_setup.sql  rppd.control  rppd.yaml  test.py  test_etcd.py  test_fn.py  test_fn_etcd.py
i18n/en/: rppd.ftl
protos/: rg.proto
rppd/: Cargo.toml  build.sh
rppd-common/: Cargo.toml  build.rs
rppd-common/protos/: rppc.proto  rppd.proto  rppg.proto
rppd-common/src/: lib.rs
rppd-common/src/protogen/: mod.rs  rppc.rs  rppd.rs  rppg.rs
rppd-pg/: Cargo.toml  pg_setup.sql
rppd-pg/src/: lib.rs
rppd/i18n/en/: rppd.ftl
rppd/src/: arg_config.rs  cron.rs  lib.rs  main.rs  py.rs  rd_config.rs  rd_etcd.rs  rd_fn.rs  rd_monitor.rs  rd_queue.rs  rd_rpc.rs
src/: arg_config.rs  cron.rs  lib.rs  main.rs  py.rs  rd_config.rs  rd_fn.rs  rd_monitor.rs  rd_queue.rs  rd_rpc.rs
