
[package]
name = "rppd"
version = "0.1.2"
authors = ["Vladimir Krinitsyn <v.krinitsyn@gmail.com>"]
edition = "2021"
description = "RPPD inclusing Trigger for Postgres"

[lib]
crate-type = ["cdylib"] # cdylib

[[bin]]
name = "rppd"
path = "src/main.rs"


[dependencies]
chrono = { version = "0.4.19", features = ["serde"] }

slog = { version = "^2.7.0", features=["max_level_debug"] }
slog-async = "^2.6.0"
slog-envlogger = "^2.2.0"
slog-stdlog = "^4.1.0"
slog-term = "^2.8.0"
sloggers = "^2.1"

tokio = { version = "1.25.0", features = ["macros", "rt-multi-thread", "net", "rt", "fs", "time", "signal", "signal-hook-registry" ] }
tokio-stream = { version = "0.1.8", features = ["net"] }
async-trait = "^0.1"
tonic = { version = "0.10.2", features = [] }
prost = "0.12.1"
prost-types = "0.12.1"
tower = "0.4.12"

uuid = {version= "1.5.0", features = ["v4"]}
base64 = "^0.21"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

once_cell = "1.9.0"

pgrx = { version = "^0.11.2", default-features = false}
bb8-postgres = {version = "0.8.0", features = ["with-chrono-0_4","with-uuid-0_8"]}

thiserror = "*"
pyo3 = { version = "^0.20", features = ["auto-initialize"] }

sqlx = { version = "0.7.2", features = ["postgres", "runtime-tokio", "chrono"] }

i18n-embed-fl = "^0.7"
i18n-embed = { version = "0.14.1", features = ["fluent-system", "desktop-requester"]}
rust-embed = "8.0.0"
unic-langid = "0.9"
lazy_static = "1.4.0"
log = "0.4.20"
cron-parser = "0.8.1"
dns-lookup = "2.0.4"

[dev-dependencies]
pgrx-tests = { version = "^0.11.2", features = ["pg14"]}

[features]
default = [ ]
pg16 = ["pgrx/pg16"]
pg15 = ["pgrx/pg15"]
pg14 = ["pgrx/pg14"]
pg_test = ["pgrx/pg15", "pgrx-tests/pg15"]


[build-dependencies]
tonic-build = { version = "^0.10", features = []}

[profile.dev]
panic = "unwind"

[profile.release]
panic = "unwind"


opt-level = "z"
lto = "thin"
codegen-units = 1
