
[package]
name = "rppd-pg"
version = "0.2.1"
authors = ["Vladimir Krinitsyn <v.krinitsyn@gmail.com>"]
edition = "2024"
description = "RPPD - Trigger for Postgres"

[lib]
name = "rppd"
crate-type = ["cdylib"] # cdylib

[dependencies]
chrono = { version = "0.4.19", features = ["serde"] }
slog = { version = "2.7.0", features=["max_level_info"] }
tokio = { version = "1.25.0", features = ["macros", "rt-multi-thread", "net", "rt", "fs", "time", "signal", "signal-hook-registry" ] }
tokio-stream = { version = "0.1.8", features = ["net"] }
async-trait = "^0.1"
tonic = { version = "0.13.0", features = ["prost", "codegen"] }

serde_json = "1.0"

once_cell = "1.9.0"

pgrx = { version = "^0.13", default-features = false}

rppd-common = {path = "../rppd-common"}

[dev-dependencies]
pgrx-tests = { version = "^0.13", features = ["pg14"]}

[features]
default = ["pg14" ]
pg17 = ["pgrx/pg17"]
pg16 = ["pgrx/pg16"]
pg15 = ["pgrx/pg15"]
pg14 = ["pgrx/pg14"]
pg13 = ["pgrx/pg13"]
pg_test = ["pgrx/pg15", "pgrx-tests/pg15"]

[profile.dev]
panic = "unwind"

[profile.release]
panic = "unwind"


opt-level = "z"
lto = "thin"
codegen-units = 1
