
[package]
name = "rppd"
version = "0.2.1"
authors = ["Vladimir Krinitsyn <v.krinitsyn@gmail.com>"]
edition = "2021"
description = "RPPD - Rust Python Postgres"

[lib]
name = "rppde"
src = "src/lib.rs"

[[bin]]
name = "rppd"
path = "src/main.rs"


[dependencies]
chrono = { version = "0.4.19", features = ["serde"] }

slog = { version = "2.7.0", features=["max_level_info"] }
#slog-async = "^2.6.0"
#slog-envlogger = "^2.2.0"
#slog-stdlog = "^4.1.0"
#slog-term = "^2.8.0"
#sloggers = "^2.1"

tokio = { version = "1.25.0", features = ["macros", "rt-multi-thread", "net", "rt", "fs", "time", "signal", "signal-hook-registry" ] }
tokio-stream = { version = "0.1.8", features = ["net"] }
async-trait = "^0.1"
tonic = { version = "0.13.0", features = ["prost", "codegen"] }
prost = { version = "0.13.5", features = ["default"] }
prost-types = "0.13.5"
tower = "^0.5"

uuid = {version= "1.5.0", features = ["v4"]}
base64 = "^0.22"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

once_cell = "1.9.0"

bb8-postgres = {version = "0.9.0", features = ["with-chrono-0_4","with-uuid-0_8"]}

thiserror = "*"
pyo3 = { version = "^0.24", features = ["auto-initialize", "uuid"] }
etcd = {git = "https://github.com/vkrinitsyn/etcd.git"}
etcd-client = "0.14.1"

sqlx = { version = "0.8.3", features = ["postgres", "runtime-tokio", "chrono"] }

i18n-embed-fl = "^0.9"
i18n-embed = { version = "^0.15", features = ["fluent-system", "desktop-requester"]}
rust-embed = "^8.6"
unic-langid = "0.9"
lazy_static = "1.4.0"
log = "0.4.20"
cron-parser = "0.10.0"
dns-lookup = "2.0.4"
shims = {git = "https://github.com/vkrinitsyn/shim.git"}
rppd-common = {path = "../rppd-common"}


[features]
default = ["etcd" ]
etcd = []


[profile.dev]
panic = "unwind"

[profile.release]
panic = "unwind"


opt-level = "z"
lto = "thin"
codegen-units = 1
